<resources>
    <string name="app_name">Lescale Restaurant</string>
    <string name="creteaccount" translatable="true">Create Your Account !</string>
    <string name="password" translatable="true">Password</string>
    <string name="enter_your_password" translatable="true">Enter Your Password</string>
    <string name="login" translatable="true">Login</string>
    <string name="forgot_password" translatable="true">Forgot Password ?</string>
    <string name="email" translatable="true">Email</string>
    <string name="sign_up" translatable="true">Sign Up</string>
    <string name="username" translatable="true">Username</string>
    <string name="confirm_password" translatable="true">Confirm Password</string>
    <string name="phone_num" translatable="true">Phone</string>
    <string name="welcome_to_lescale" translatable="true">Welcome to Lescale !</string>
    <string name="menu" translatable="true">Menu</string>
    <string name="home" translatable="true">Home</string>
    <string name="profile" translatable="true">Profile</string>
    <string name="cart" translatable="true">Cart</string>
    <string name="forgotpass" translatable="true">Forgot Password</string>
    <string name="submit" translatable="true">Submit</string>
    <string name="email_req">Email Required</string>
    <string name="password_req">Password Required</string>
    <string name="name_req">Name Required</string>
    <string name="cnfrm_pass_req">Confirm Password Required</string>
    <string name="pass_mismatch">Password Mismatch</string>
    <string name="pass_six_char">Password must be more than six Characters</string>
    <string name="num_req">Phone Num Required</string>

    <string name="Sandwich">Sandwich</string>
    <string name="Burgers">Burgers</string>
    <string name="Tacos">Tacos</string>
    <string name="Special">Special</string>
    <string name="Entrees">Apetizers</string>
    <string name="Pates">Pasta</string>
    <string name="Viandes">Meat</string>
    <string name="Grillades">Grill</string>
    <string name="Poulets">Chicken</string>
    <string name="Poissons">Fish &amp; Seafood</string>
    <string name="Promos">Promos</string>
    <string name="Boissons_Chaudes">Hot drinks</string>
    <string name="Jus">Juices</string>
    <string name="Milkshakes">Milkshakes</string>
    <string name="Salads">Salads</string>
    <string name="Pizza">Pizza</string>
    <string name="desert">Desert</string>
    <string name="petit_dejeuner">BreakFast</string>

    <string name="home_delivery">Home Delivery</string>
    <string name="take_away">Take Away</string>
    <string name="click_here_to_get_your_current_location">Click Here to get Your Current Location</string>
    <string name="note">*Note: The Delivery Fee will be defined by Restaurant\'s Administration depending on your Location</string>
    <string name="order_details">Order Details</string>
    <string name="add_to_cart">Add to Cart</string>

    <string name="reg_sucess">Successfully Registered PLease Login now to continue</string>
    <string name="plslogintocontinue">Please Login to Continue</string>
    <string name="restpasslink">Password Reset link has been sent to your Email Address</string>
    <string name="title_activity_maps">Map</string>
    <string name="cantmapreq">You can\'t make map requests</string>
    <string name="thisapprequiresgpsENBLE">This application requires GPS to work properly, do you want to enable it?</string>
    <string name="current_loc">Current Location</string>
    <string name="address">Address</string>
    <string name="or">OR</string>
    <string name="place_order">Place Order</string>
    <string name="order_history">Order History</string>
    <string name="log_out">Log Out</string>

    <string name="plzLoginCart">Please Login to add Items to your Cart</string>
    <string name="addedtocart">Added to Cart</string>
    <string name="quantity">Quantity</string>
    <string name="orderplacedcnfm">Order has been placed</string>
    <string name="addReqForDelivery">Address Required For Delivery</string>
    <string name="cartEmpty">Cart is Empty</string>
    <string name="del_succ_msg">Item Deleted Successfully</string>
    <string name="del_cnfm_msg">Are you sure you want to delete this item ?</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="total_price">Total Price</string>
    <string name="please_wait">Please Wait</string>
    <string name="change_language">Change Language</string>
    <string name="backpress">Please click BACK again to exit</string>
    <string name="loading">Loading....</string>
    <string name="nopreviosorder">No Previous Orders</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="signingin">Signing in....</string>
    <string name="signingUP">Signing up....</string>
    <string name="placingorder">Placing Order....</string>
    <string name="emptymenu">\Empty Menu For \</string>
    <string name="siginingOut">Signing Out....</string>
    <string name="pressagantocall">Press again to call</string>
    <string name="total">\"Total: \"</string>
    <string name="select">Select Order type i.e Delivery or Take Away</string>
    <string name="contact">contact</string>
    <string name="whatsapp_num">whatsapp_num</string>
    <string name="whatsapp">whatsapp</string>
    <string name="more">more</string>
    <string name="presentation">presentation</string>
    <string name="presentation_description">presentation_description</string>
    <string name="Presentation">Presentation</string>
    <string name="Telephone">Telephone</string>
    <string name="Whatsapp">Whatsapp</string>
    <string name="Email_adress">Email_adress</string>
    <string name="Facebook">Facebook</string>
    <string name="Share">Share</string>
    <string name="Email">Email</string>
    <string name="web">web</string>
    <string name="More">More</string>

    <string name="facebook_app_id">269672974448624</string>
    <string name="fb_login_protocol_scheme">fb269672974448624</string>
    <string name="ok">Ok</string>
    <string name="noDeliverzone">We do not Deliver here !</string>
    <string name="re_order">Re Order</string>
    <string name="delete">Delete</string>
    <string name="any_recommendation">Any Recommendation</string>
    <string name="login_with_mobile_number">Login with Mobile Number</string>
    <string name="send_code">Send Code</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code</string>
    <string name="insert_required_information">Insert Required Information</string>
    <string name="invalidphone">Invalid Phone Number</string>
    <string name="deliverfee">Delivery Fee</string>


</resources>
