<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Sky_blue"
    tools:context=".Activities.MobileRegistration">

    <RelativeLayout
        android:id="@+id/relative_homeID"
        style="@style/actionBar"
        >

        <TextView
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/welcome_to_lescale"
            android:textColor="@color/white"
            android:textSize="25dp" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relative_homeID"
        android:background="@drawable/curve_back"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/EditTextStyle"
        android:id="@+id/a"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/phone_num"
        android:textColorHint="@color/darkgray">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/cursor_color"
            android:fontFamily="@font/montserrat"
            android:inputType="phone"
            android:padding="20dp"
            android:id="@+id/phone_otp"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_otp"
        android:layout_below="@id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonback"
        android:fontFamily="@font/montserrat"
        android:padding="15dp"
        android:text="@string/send_code"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <Button
        android:visibility="gone"
        android:id="@+id/verify_otp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonback"
        android:fontFamily="@font/montserrat"
        android:padding="15dp"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <EditText
        android:visibility="gone"
        android:layout_width="120dp"
        android:textAlignment="center"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/verify_otp"
        android:hint="OTP Code"
        android:id="@+id/otp_edit"
        />

    <Button
        android:visibility="gone"
        android:id="@+id/resend_otp"
        android:layout_below="@id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonback"
        android:fontFamily="@font/montserrat"
        android:padding="15dp"
        android:text="@string/resend_code"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />

</RelativeLayout>