<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AuthFragments.Login">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
        android:textColorHint="@color/darkgray">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/cursor_color"
            android:fontFamily="@font/montserrat"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:id="@+id/email_login"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/EditTextStyle"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:textColorHint="@color/darkgray">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/cursor_color"
            android:id="@+id/password_login"
            android:fontFamily="@font/montserrat"
            android:inputType="textPassword"
            android:padding="20dp"
            android:password="true"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pass_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/login_btn_loginfrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonback"
        android:fontFamily="@font/montserrat"
        android:padding="15dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />


</LinearLayout>