<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BottomNavigationFragment.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/order_history"
            android:textSize="20dp"
            android:textColor="#000000"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:drawableStart="@drawable/ic__26_return_history"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
            android:id="@+id/order_history"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/change_language"
            android:textSize="20dp"
            android:fontFamily="@font/montserrat"
            android:textColor="#000000"
            android:padding="10dp"
            android:drawableStart="@drawable/ic__25_translate"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
            android:id="@+id/lang"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/log_out"
            android:textSize="20dp"
            android:fontFamily="@font/montserrat"
            android:textColor="#000000"
            android:padding="10dp"
            android:drawableStart="@drawable/ic__28_power"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
            android:id="@+id/order_logout"/>

    </LinearLayout>


</FrameLayout>