<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AuthFragments.Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/username"
            android:textColorHint="@color/darkgray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_color"
                android:id="@+id/username_reg"
                android:fontFamily="@font/montserrat"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email"
            android:textColorHint="@color/darkgray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_color"
                android:id="@+id/email_reg"
                android:fontFamily="@font/montserrat"
                android:inputType="textWebEmailAddress"
                android:padding="20dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextStyle"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:textColorHint="@color/darkgray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_color"
                android:id="@+id/password_reg"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:padding="20dp"
                android:password="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextStyle"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/darkgray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_color"
                android:id="@+id/confirm_pass_reg"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:padding="20dp"
                android:password="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/phone_num"
            android:textColorHint="@color/darkgray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_color"
                android:id="@+id/phone_reg"
                android:fontFamily="@font/montserrat"
                android:inputType="number"
                android:padding="20dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/whatsapp"
            android:textColorHint="@color/darkgray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_color"
                android:id="@+id/whatsapp_reg"
                android:fontFamily="@font/montserrat"
                android:inputType="number"
                android:padding="20dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonback"
            android:fontFamily="@font/montserrat"
            android:padding="15dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>
</ScrollView>